--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $cyan-color: #2698ba !default;
 $light-cyan-color: lighten($cyan-color, 25%);
 $green-color: #00ab37 !default;
 $green-color-lime: #b7d12a !default;
-$green-color-dark: #0b6c0e !default;
+$green-color-dark: #028f07 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
 $purple-color: #b509ac !default;
