--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -1,21 +1,15 @@
 <!doctype html>
 <html lang="{{ site.lang }}">
-  <!-- Head -->
+
+   <!-- Head -->
   <head>
-    {% if page.redirect %}
-      {% if page.redirect == true %}
-        {% assign redirect = site.baseurl | append: '/' %}
-      {% elsif page.redirect contains '://' %}
-        {% assign redirect = page.redirect %}
-      {% else %}
-        {% assign redirect = page.redirect | relative_url %}
-      {% endif %}
-      <meta http-equiv="refresh" content="3; url={{ redirect }}">
-    {% endif %}
-    {% if page.redirect_to %}
-      <meta http-equiv="refresh" content="0; url={{ page.redirect_to }}/" />
-    {% endif %}
-    {% include head.liquid %}
+  {%- if page.redirect -%}
+    <meta http-equiv="refresh" content="3; url={{ site.baseurl }}/" />
+  {%- endif -%}
+  {%- if page.redirect_to -%}
+    <meta http-equiv="refresh" content="0; url={{ page.redirect_to }}/" />
+  {%- endif -%}
+  {% include head.html %}
   </head>
 
   <!-- Body -->
