--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -9,7 +9,7 @@
   {%- if page.redirect_to -%}
     <meta http-equiv="refresh" content="0; url={{ page.redirect_to }}/" />
   {%- endif -%}
-  {% include head.html %}
+  {% include head.liquid %}
   </head>
 
   <!-- Body -->
