--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
+<!-- _layouts/cv.default -->
+        <div class="post">
+
+	<object data="../assets/pdf/Resume_GC_0224.pdf#pagemode=none" width="750" height="1000" type='application/pdf'></object>
+
+        </div>
+
 {% unless site.data.resume %}
   <div class="post">
     <header class="post-header">
