--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -3,6 +3,7 @@
 
    <!-- Head -->
   <head>
+   <meta name="google-site-verification" content="02d047ee78f05afc" />
   {%- if page.redirect -%}
     <meta http-equiv="refresh" content="3; url={{ site.baseurl }}/" />
   {%- endif -%}
